--- a/packages/assets/css/src/scss/_utils/_tokens.scss
+++ b/packages/assets/css/src/scss/_utils/_tokens.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 30 Nov 2023 07:16:16 GMT
+// Generated on Fri, 01 Dec 2023 06:48:18 GMT
 
 $accordion-border-radius-sm: 10px;
 $advanced-banner-background: linear-gradient(90deg, #222 0%, #383323 48.96%, #514524 100%);
@@ -17,9 +17,11 @@ $banner-font-size-lg: 40px;
 $banner-font-height-lg: 48px;
 $banner-font-spacing: 1px;
 $banner-border-radius: 16px;
+$banner-spacing-xxs: 10px;
 $banner-spacing-xs: 12px;
 $banner-spacing-sm: 24px;
-$banner-spacing-md: 48px;
+$banner-spacing-md: 34px;
+$banner-spacing-lg: 48px;
 $banner-size-sm: 420px;
 $banner-size-md: 420px;
 $banner-size-lg: 784px;
